--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 		<!-- Banner -->
 			<section id="banner">
 				<header>
-					<h2>This is Overflow</h2>
+					<h2>What do I like to do</h2>
 				</header>
-				<p>A brand new site template designed by <a href="http://n33.co">AJ</a> for <a href="http://html5up.net/">HTML5 UP</a>.<br />
+				<p>I have a passion for network security and administration. I am interested in both Windows and Linux, but I have had more success working on Windows. I love learning what is under the hood regarding linux. I also have a history of web development. <br />
 				It’s fully responsive, built on <a href="http://skeljs.org">skelJS</a>, and of course entirely free<br />
 				under the <a href="http://html5up.net/license/">Creative Commons license</a>.</p>
 				<footer>
