--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<section id="header">
 				<header>
 					<h1>Mike's Work</h1>
-					<p>In this page I will brag about myself and make myself feel significant</p>
+					<p>In this page I'll try my hardest to explain my strengths and my weaknesses in reference to my work skills.</p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly scrolly-centered">Proceed as anticipated</a>
