--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<p>In this page I'll try my hardest to explain my strengths and my weaknesses in reference to my work skills.</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style2 scrolly scrolly-centered">Proceed as anticipated</a>
+					<a href="#banner" class="button style2 scrolly scrolly-centered">My Interests</a>
 				</footer>
 			</section>
 		
