--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<br />
 				.</p>
 				<footer>
-					<a href="#first" class="button style2 scrolly">Act on this message</a>
+					<a href="#first" class="button style2 scrolly">Read over my accolades</a>
 				</footer>
 			</section>
 		
