--- a/index.html
+++ b/index.html
@@ -65,10 +65,14 @@
 				<a href="http://ineedchemicalx.deviantart.com/art/Kingdom-of-the-Wind-348268044" class="image full"><img src="images/pic02.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Mollis posuere<br />
+						<h2>Competition Awards<br />
 						lectus lacus</h2>
 					</header>
-					<p>Rhoncus mattis egestas sed fusce sodales rutrum et etiam ullamcorper. Etiam egestas scelerisque ac duis magna lorem ipsum dolor.</p>
+					<p><li>
+<I>1st Place CyberPatriot State Championship Team</I>
+<I>2nd Place Regional CyberPatriot Team</I>
+<I>CyberPatriot National Semifinalist Team</I>
+<I>1st Place Governor's Cyber Cup (VA) Championship Team</I></p>
 				</div>
 			</article>
 		
