--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 						<h2>Competition Awards<br />
 						lectus lacus</h2>
 					</header>
-					<p><li>
-<I>1st Place CyberPatriot State Championship Team</I>
-<I>2nd Place Regional CyberPatriot Team</I>
-<I>CyberPatriot National Semifinalist Team</I>
-<I>1st Place Governor's Cyber Cup (VA) Championship Team</I></p>
+					<p>
+<li>1st Place CyberPatriot State Championship Team</li>
+<li>2nd Place Regional CyberPatriot Team</li>
+<li>CyberPatriot National Semifinalist Team</li>
+<li>1st Place Governor's Cyber Cup (VA) Championship Team</li></p>
 				</div>
 			</article>
 		
