Remove subtitle, fixed list again

--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
 				<div class="inner">
 					<header>
 						<h2>Competition Awards<br />
-						lectus lacus</h2>
+						</h2>
 					</header>
 					<p>
 <li>1st Place CyberPatriot State Championship Team</li>
 <li>2nd Place Regional CyberPatriot Team</li>
 <li>CyberPatriot National Semifinalist Team</li>
-<li>1st Place Governor's Cyber Cup (VA) Championship Team</li></p>
+<li>1st Place Governor's Cyber Cup (VA) Championship Team</li>
+<Li>Maryland Cyber Challenge 2013 Top 8 Team</li></p>
 				</div>
 			</article>
 		
