--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
 		
 		<section id="footer">
 			<ul class="icons">
-				<li><a href="#" class="fa fa-twitter solo"><span>Twitter</span></a></li>
-				<li><a href="#" class="fa fa-facebook solo"><span>Facebook</span></a></li>
+				<li><a href="http://www.twitter.com/mikebailey97" class="fa fa-twitter solo"><span>Twitter</span></a></li>
+				<li><a href="www.facebook.com/Michael.bailey.9277" class="fa fa-facebook solo"><span>Facebook</span></a></li>
 				<li><a href="#" class="fa fa-google-plus solo"><span>Google+</span></a></li>
 				<li><a href="#" class="fa fa-pinterest solo"><span>Pinterest</span></a></li>
 				<li><a href="#" class="fa fa-dribbble solo"><span>Dribbble</span></a></li>
