--- a/index.html
+++ b/index.html
@@ -282,11 +282,11 @@
 		<section id="footer">
 			<ul class="icons">
 				<li><a href="http://www.twitter.com/mikebailey97" class="fa fa-twitter solo"><span>Twitter</span></a></li>
-				<li><a href="www.facebook.com/Michael.bailey.9277" class="fa fa-facebook solo"><span>Facebook</span></a></li>
+				<li><a href="http://www.facebook.com/Michael.bailey.9277" class="fa fa-facebook solo"><span>Facebook</span></a></li>
 				<li><a href="#" class="fa fa-google-plus solo"><span>Google+</span></a></li>
 				<li><a href="#" class="fa fa-pinterest solo"><span>Pinterest</span></a></li>
 				<li><a href="#" class="fa fa-dribbble solo"><span>Dribbble</span></a></li>
-				<li><a href="#" class="fa fa-linkedin solo"><span>LinkedIn</span></a></li>
+				<li><a href="https://www.linkedin.com/profile/view?id=98814712" class="fa fa-linkedin solo"><span>LinkedIn</span></a></li>
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
