--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<section id="header">
 				<header>
 					<h1>Mike's Work</h1>
-					<p>In this page I'll try my hardest to explain my strengths and my weaknesses in reference to my work skills.</p>
+					<p>On this page I'll try my hardest to explain my strengths and my weaknesses in reference to my work-related skills.</p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style2 scrolly scrolly-centered">My Interests</a>
@@ -36,9 +36,9 @@
 				<header>
 					<h2>What do I like to do</h2>
 				</header>
-				<p>I have a passion for network security and administration. I am interested in both Windows and Linux, but I have had more success working on Windows. I love learning what is under the hood regarding linux. I also have a history of web development. <br />
-		<br />
-				.</p>
+				<p>I have a passion for network security and administration. I am interested in both Windows and Linux, but I have had more success working on Windows. I love learning what is under the hood regarding linux. I also have a nice track record of web development. <br />
+		<br /></br></br> I am also part of a cyber security club that allows me to compete and prove my merit in the field. You will see my achievements in the next section.
+				</p>
 				<footer>
 					<a href="#first" class="button style2 scrolly">Read over my accolades</a>
 				</footer>
