--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 		
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 right">
-				<a href="http://ineedchemicalx.deviantart.com/art/Time-goes-by-too-fast-335982438" class="image full"><img src="images/pic01.jpg" alt="" /></a>
+				<a href="http://www.crystalaquatics.com/" class="image full"><img src="https://scontent-1.2914.fna.fbcdn.net/hphotos-ash3/t1.0-9/1176382_579927935403433_1542162186_n.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
-						<h2>Lorem ipsum<br />
-						dolor sit amet</h2>
+						<h2>My Work Experience<br />
+						Past and Current</h2>
 					</header>
 					<p>Tortor faucibus ullamcorper nec tempus purus sed penatibus. Lacinia pellentesque eleifend vitae est elit tristique velit tempus etiam.</p>
 				</div>
