--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 		
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 right">
-				<a href="http://www.crystalaquatics.com/" class="image full"><img src="https://scontent-1.2914.fna.fbcdn.net/hphotos-ash3/t1.0-9/1176382_579927935403433_1542162186_n.jpg" alt="" /></a>
+				<a href="http://www.crystalaquatics.com/" class="image full"><img src="https://scontent-1.2914.fna.fbcdn.net/hphotos-ash3/t1.0-9/1176382_579927935403433_1542162186_n.jpg" align="left" alt="crystalteam" /></a>
 				<div class="inner">
 					<header>
 						<h2>My Work Experience<br />
 						Past and Current</h2>
 					</header>
-					<p>Tortor faucibus ullamcorper nec tempus purus sed penatibus. Lacinia pellentesque eleifend vitae est elit tristique velit tempus etiam.</p>
+					<p>I got my initial work experience at a pool. I spent a few years as a lifeguard, mainly working at Cardinal Hill. I worked officially under Crystal Aquatics, who had a contract with Cardinal Hill. I got promoted to manager duties towards the end of 2013 and managed the staff/pool facilities.</br>I currently work for Metier Defense Solutions</br></p>
 				</div>
 			</article>
 		
