--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 right">
-				<a href="http://www.crystalaquatics.com/" class="image full"><img src="https://scontent-1.2914.fna.fbcdn.net/hphotos-ash3/t1.0-9/1176382_579927935403433_1542162186_n.jpg" align="left" alt="crystalteam" /></a>
+				<a href="http://www.crystalaquatics.com/" class="image full"><img src="https://scontent-1.2914.fna.fbcdn.net/hphotos-ash3/t1.0-9/1176382_579927935403433_1542162186_n.jpg" align="center" alt="crystalteam" /></a>
 				<div class="inner">
 					<header>
 						<h2>My Work Experience<br />
