--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		
 		<!-- Feature 2 -->
 			<article class="container box style1 left">
-				<a href="http://ineedchemicalx.deviantart.com/art/Kingdom-of-the-Wind-348268044" class="image full"><img src="images/pic02.jpg" alt="" /></a>
+				<a href="http://commweb.fcps.edu/newsreleases/newsrelease.cfm?newsid=2509" class="image full"><img src="images/pic02.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
 						<h2>Competition Awards<br />
