--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,300italic" rel="stylesheet" type="text/css" />
+		<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
+
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.poptrox.min.js"></script>
@@ -64,12 +66,15 @@
 						<h2>Competition Awards<br />
 						</h2>
 					</header>
-					<p>
+					<p><ul>
 <li>1st Place CyberPatriot State Championship Team</li>
 <li>2nd Place Regional CyberPatriot Team</li>
 <li>CyberPatriot National Semifinalist Team</li>
 <li>1st Place Governor's Cyber Cup (VA) Championship Team</li>
-<Li>Maryland Cyber Challenge 2013 Top 8 Team</li></p>
+<Li>Maryland Cyber Challenge 2013 Top 8 Team</li>
+<li><b>I now run the club for 2014-2015</b></li>
+</ul>
+</p>
 				</div>
 			</article>
 		
@@ -82,9 +87,9 @@
 				</header>
 				<div class="inner gallery">
 					<div class="row flush">
-						<div class="3u"><a href="images/fulls/01.jpg" class="image full"><img src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
-						<div class="3u"><a href="images/fulls/02.jpg" class="image full"><img src="images/thumbs/02.jpg" alt="" title="Dressed in Clarity" /></a></div>
-						<div class="3u"><a href="images/fulls/03.jpg" class="image full"><img src="images/thumbs/03.jpg" alt="" title="Raven" /></a></div>
+						<div class="3u"><a href="images/cyber.jpg" class="image full"><img src="images/cyber.jpg" alt="" title="Ad infinitum" /></a></div>
+						<div class="3u"><a href="images/robotics.jpg" class="image full"><img src="images/robotics.jpg" alt="" title="Dressed in Clarity" /></a></div>
+						<div class="3u"><a href="images/healthytactics.jpg" class="image full"><img src="images/healthytactics.jpg" alt="" title="Raven" /></a></div>
 						<div class="3u"><a href="images/fulls/04.jpg" class="image full"><img src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
 					</div>
 					<div class="row flush">
@@ -290,8 +295,8 @@
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
-					<li>&copy; Untitled. All rights reserved.</li>
-					<li>Design: <a href="http://html5up.net/">HTML5 UP</a></li>
+					<li>&copy; Mike's Page. All rights reserved.</li>
+					<li>Design template courtesy <a href="http://html5up.net/">HTML5 UP</a></li>
 				</ul>
 			</div>
 		</section>
