--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<div class="inner gallery">
 					<div class="row flush">
 						<div class="3u"><a href="images/cyber.jpg" class="image full"><img src="images/cyber.jpg" alt="" title="statesmencybersecurity.org, a site I completely revamped. It uses WordPress." /></a></div>
-						<div class="3u"><a href="images/robotics.jpg" class="image full"><img src="images/robotics.jpg" alt="" title="This is a robotics site I secured and tinkered with, entirely in custom HTML/PHP with a SQL backend" /></a></div>
+						<div class="3u"><a href="images/robotics.jpg" class="image full"><img src="images/robotics.jpg" alt="" title="This is a robotics site I secured and tinkered with, entirely in custom HTML/PHP with a SQL backend." /></a></div>
 						<div class="3u"><a href="images/healthytactics.jpg" class="image full"><img src="images/healthytactics.jpg" alt="" title="HealthyTactics, a site I work on a little for my mother. I mainly modify the content per her request, which is rare." /></a></div>
 						<div class="3u"><a href="images/fulls/04.jpg" class="image full"><img src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
 					</div>
@@ -289,6 +289,7 @@
 				<li><a href="http://www.twitter.com/mikebailey97" class="fa fa-twitter solo"><span>Twitter</span></a></li>
 				<li><a href="http://www.facebook.com/Michael.bailey.9277" class="fa fa-facebook solo"><span>Facebook</span></a></li>
 				<li><a href="#" class="fa fa-google-plus solo"><span>Google+</span></a></li>
+				<li><a href="" class="fa fa-google-plus solo"><span>Resume</span></a></li>
 <!--			
 // I use neither of these platforms
 			<li><a href="#" class="fa fa-pinterest solo"><span>Pinterest</span></a></li>
