Remove default message form

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				<header>
 					<h2>Nisl sed ultricies</h2>
 					<p>Diam dignissim lectus eu ornare volutpat orci.</p>
-				</header>
+				</header> <!-- I currently have zero use for a message form
 				<form>
 					<div class="row half">
 						<div class="6u"><input type="text" class="text" name="name" placeholder="Name" /></div>
@@ -126,7 +126,7 @@
 					</div>
 				</form>
 			</article>
-		
+		-->
 		<!-- Generic -->
 		<!--
 			<article class="container box style3">
