--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
 		<!-- Contact -->
 			<article class="container box style3">
 				<header>
-					<h2>Nisl sed ultricies</h2>
-					<p>Diam dignissim lectus eu ornare volutpat orci.</p>
+					<h2>Where to go from here?</h2>
+					<p>You can download my resume here and contact me with the information provided. Please do not spam, there are special countermeasures in place.
+Here are a few things I did not put on my conventional resume: </br><ul><li>I've been working with HTML since the age of 10</li></ul></p>
 				</header> <!-- I currently have zero use for a message form
 				<form>
 					<div class="row half">
