--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				<header>
 					<h2>Where to go from here?</h2>
 					<p>You can download my resume here and contact me with the information provided. Please do not spam, there are special countermeasures in place.
-Here are a few things I did not put on my conventional resume: </br><ul><li>I've been working with HTML since the age of 10</li></ul></p>
+Here are a few things I did not put on my conventional resume: </br><ul><li>I've been working with HTML since the age of 10</li><li>I've visited multiple companies and agencies IT and/or network security departments, including, but not exclusive to, <I>ComScore, inc.</I>, <I>Department of Veterans Affairs</I>, <I>Lockheed Martin (namely their nexgen facilities, including their security center</I></ul></p>
 				</header> <!-- I currently have zero use for a message form
 				<form>
 					<div class="row half">
