--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<article class="container box style3">
 				<header>
 					<h2>Where to go from here?</h2>
-					<p>You can download my resume here and contact me with the information provided. Please do not spam, there are special countermeasures in place.
+					<p>You can download my resume at a temporary link <a href="https://www.dropbox.com/s/16xhsk4716jksgw/Mikes%20Resume.pdf">here</a> and contact me with the information provided. Please do not spam, there are special countermeasures in place.
 Here are a few things I did not put on my conventional resume: </br><ul><li>I've been working with HTML since the age of 10</li><li>I've visited multiple companies and agencies IT and/or network security departments, including, but not exclusive to, <I>ComScore, inc.</I>, <I>Department of Veterans Affairs</I>, <I>Lockheed Martin (namely their nexgen facilities, including their security center)</I><li>Varsity Swimmer of 2 Years</li><li>CodeDay (DC) 2014 Attendee</li><li>DefCon 22 (Vegas) Planned Attendee</li><li>GEOINT 2013 (Tampa) Attendee</li><li>Gave a speech to a high school's STEM program recently</li><li>Wrote a 20 page guide on the security of Ubuntu workstations, with supplemental pages on server roles</li></ul></p>
 				</header> <!-- I currently have zero use for a message form
 				<form>
