--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
 						Past and Current</h2>
 					</header>
 					<p>I got my initial work experience at a pool. I spent a few years as a lifeguard, mainly working at Cardinal Hill. I worked officially under Crystal Aquatics, who had a contract with Cardinal Hill. I got promoted to manager duties towards the end of 2013 and managed the staff/pool facilities.</br>I currently work for Metier Defense Solutions</br></p>
+				</br><a href="#awards" class="button style2 scrolly">Competitive Awards</a>
 				</div>
 			</article>
 		
 		<!-- Feature 2 -->
-			<article class="container box style1 left">
+			<article id="awards" class="container box style1 left">
 				<a href="http://commweb.fcps.edu/newsreleases/newsrelease.cfm?newsid=2509" class="image full"><img src="images/pic02.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
@@ -90,7 +91,7 @@
 						<div class="3u"><a href="images/cyber.jpg" class="image full"><img src="images/cyber.jpg" alt="" title="statesmencybersecurity.org, a site I completely revamped. It uses WordPress." /></a></div>
 						<div class="3u"><a href="images/robotics.jpg" class="image full"><img src="images/robotics.jpg" alt="" title="This is a robotics site I secured and tinkered with, entirely in custom HTML/PHP with a SQL backend." /></a></div>
 						<div class="3u"><a href="images/healthytactics.jpg" class="image full"><img src="images/healthytactics.jpg" alt="" title="HealthyTactics, a site I work on a little for my mother. I mainly modify the content per her request, which is rare." /></a></div>
-						<div class="3u"><a href="images/lowresspeech.jpg" class="image full"><img src="images/lowresspeech.jpg" alt="" title="Low-res picture of myself giving a speech to Marshall STEM Academy" /></a></div>
+						<div class="3u"><a href="images/govcup.jpg" class="image full"><img src="images/govcup.jpg" alt="" title="Myself (far left) and my team accepting 1st Place in VA Gov Cup 2014" /></a></div>
 					</div>
 					<div class="row flush">
 						<div class="3u"><a href="images/fulls/05.jpg" class="image full"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
@@ -291,7 +292,6 @@ Here are a few things I did not put on my conventional resume: </br><ul><li>I've
 				<li><a href="http://www.twitter.com/mikebailey97" class="fa fa-twitter solo"><span>Twitter</span></a></li>
 				<li><a href="http://www.facebook.com/Michael.bailey.9277" class="fa fa-facebook solo"><span>Facebook</span></a></li>
 				<li><a href="#" class="fa fa-google-plus solo"><span>Google+</span></a></li>
-				<li><a href="" class="fa fa-google-plus solo"><span>Resume</span></a></li>
 <!--			
 // I use neither of these platforms
 			<li><a href="#" class="fa fa-pinterest solo"><span>Pinterest</span></a></li>
