--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<br /></br></br> I am also part of a cyber security club that allows me to compete and prove my merit in the field. You will see my achievements in the next section.
 				</p>
 				<footer>
-					<a href="#first" class="button style2 scrolly">Read over my accolades</a>
+					<a href="#first" class="button style2 scrolly scrolly-centered">Read over my accolades</a>
 				</footer>
 			</section>
 		
