--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 						<div class="3u"><a href="images/cyber.jpg" class="image full"><img src="images/cyber.jpg" alt="" title="statesmencybersecurity.org, a site I completely revamped. It uses WordPress." /></a></div>
 						<div class="3u"><a href="images/robotics.jpg" class="image full"><img src="images/robotics.jpg" alt="" title="This is a robotics site I secured and tinkered with, entirely in custom HTML/PHP with a SQL backend." /></a></div>
 						<div class="3u"><a href="images/healthytactics.jpg" class="image full"><img src="images/healthytactics.jpg" alt="" title="HealthyTactics, a site I work on a little for my mother. I mainly modify the content per her request, which is rare." /></a></div>
-						<div class="3u"><a href="images/govcup.jpg" class="image full"><img src="images/govcup.jpg" alt="" title="Myself (far left) and my team accepting 1st Place in VA Gov Cup 2014" /></a></div>
+						<div class="3u"><a href="images/govcup.jpg" class="image full"><img src="images/govcup.jpg" alt="" title="Gov Cup 2014" /></a></div>
 					</div>
 					<div class="row flush">
 						<div class="3u"><a href="images/fulls/05.jpg" class="image full"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
