--- a/index.html
+++ b/index.html
@@ -92,21 +92,21 @@
 						<div class="3u"><a href="images/robotics.jpg" class="image full"><img src="images/robotics.jpg" alt="" title="This is a robotics site I secured and tinkered with, entirely in custom HTML/PHP with a SQL backend." /></a></div>
 						<div class="3u"><a href="images/healthytactics.jpg" class="image full"><img src="images/healthytactics.jpg" alt="" title="HealthyTactics, a site I work on a little for my mother. I mainly modify the content per her request, which is rare." /></a></div>
 						<div class="3u"><a href="images/govcup.jpg" class="image full"><img src="images/govcup.jpg" alt="" title="Gov Cup 2014" /></a></div>
-					</div>
+					</div> <!-- 
 					<div class="row flush">
 						<div class="3u"><a href="images/fulls/05.jpg" class="image full"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
 						<div class="3u"><a href="images/fulls/06.jpg" class="image full"><img src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
 						<div class="3u"><a href="images/fulls/07.jpg" class="image full"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
 						<div class="3u"><a href="images/fulls/08.jpg" class="image full"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
-					</div>
-				</div>
+					</div> 
+				</div> -->
 			</article>
 		
 		<!-- Contact -->
 			<article class="container box style3">
 				<header>
 					<h2>Where to go from here?</h2>
-					<p>You can download my resume at a temporary link <a href="https://www.dropbox.com/s/16xhsk4716jksgw/Mikes%20Resume.pdf">here</a> and contact me with the information provided. Please do not spam, there are special countermeasures in place.
+					<p>You can download my resume at a temporary link <a href="/resume.pdf">here</a> and contact me with the information provided. Please do not spam, there are special countermeasures in place.
 Here are a few things I did not put on my conventional resume: </br><ul><li>I've been working with HTML since the age of 10</li><li>I've visited multiple companies and agencies IT and/or network security departments, including, but not exclusive to, <I>ComScore, inc.</I>, <I>Department of Veterans Affairs</I>, <I>Lockheed Martin (namely their nexgen facilities, including their security center)</I><li>Varsity Swimmer of 2 Years</li><li>CodeDay (DC) 2014 Attendee</li><li>DefCon 22 (Vegas) Planned Attendee</li><li>GEOINT 2013 (Tampa) Attendee</li><li>Gave a speech to a high school's STEM program recently</li><li>Wrote a 20 page guide on the security of Ubuntu workstations, with supplemental pages on server roles</li></ul></p>
 				</header> <!-- I currently have zero use for a message form
 				<form>
@@ -299,7 +299,7 @@ Here are a few things I did not put on my conventional resume: </br><ul><li>I've
 				
 				--> 
 				<li><a href="https://www.linkedin.com/profile/view?id=98814712" class="fa fa-linkedin solo"><span>LinkedIn</span></a></li></br>
-				<li><a href="">Resume</a></li>
+				<li><a href="/resume.pdf">Resume</a></li>
 			</ul>
 			<div class="copyright">
 				<ul class="menu">
