--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,9 @@
 <html><head></head>
 <body>
 
-Resume here: <a href="http://www.michaelbailey.co/resume.pdf"></a>
+Resume here: <a href="http://www.michaelbailey.co/resume.pdf">Resume</a>
+</br></br>
+<iframe src="http://www.michaelbailey.co/resume.pdf"></iframe>
 
 </body>
 
