--- a/resume/index.html
+++ b/resume/index.html
@@ -3,7 +3,7 @@
 
 Resume here: <a href="http://www.michaelbailey.co/resume.pdf">Resume</a>
 </br></br>
-<iframe src="http://www.michaelbailey.co/resume.pdf"></iframe>
+<iframe src="http://www.michaelbailey.co/resume.pdf" width=100% height=100%></iframe>
 
 </body>
 
