--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,7 @@
 <html><head></head>
 <body>
 
-<text align="left">Resume here: <a href="http://www.michaelbailey.co/resume.pdf">Resume</a></text><text text-align="right"><a href="http://www.michaelbailey.co">     Homepage</a></text>
+<text align="left">Resume here: <a href="http://www.michaelbailey.co/resume.pdf">Resume</a></text><text text-align="right"><a href="http://www.michaelbailey.co">     </br>Homepage</a></text>
 </br></br>
 <iframe src="http://www.michaelbailey.co/resume.pdf" width=100% height=100%></iframe>
 
