--- a/resume/index.html
+++ b/resume/index.html
@@ -1,8 +1,12 @@
-<html><head></head>
-<body>
+<html><head>
+			<title>Resume</title>
 
+			<link rel="stylesheet" href="css/skel-noscript.css" />
+			<link rel="stylesheet" href="css/style.css" /></head>
+<body>
+<center><div class="banner">
 <text align="left">Resume here: <a href="http://www.michaelbailey.co/resume.pdf">Resume</a></text><text text-align="right"><a href="http://www.michaelbailey.co">     </br>Homepage</a></text>
-</br></br>
+</br></br></div>
 <iframe src="http://www.michaelbailey.co/resume.pdf" width=100% height=100%></iframe>
 
 </body>
