--- a/resume/index.html
+++ b/resume/index.html
@@ -4,7 +4,7 @@
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" /></head>
 <body>
-<center><div class="banner">
+<div style="background-image: url(http://www.michaelbailey.co/images/fulls/04.jpg)"><center>
 <text align="left">Resume here: <a href="http://www.michaelbailey.co/resume.pdf">Resume</a></text><text text-align="right"><a href="http://www.michaelbailey.co">     </br>Homepage</a></text>
 </br></br></div>
 <iframe src="http://www.michaelbailey.co/resume.pdf" width=100% height=100%></iframe>
