Let's try that again
The background looked ugly a f

--- a/resume/index.html
+++ b/resume/index.html
@@ -3,8 +3,8 @@
 
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" /></head>
-<body>
-<div style="background-image: url(http://www.michaelbailey.co/images/fulls/04.jpg)"><center>
+<body style="background-image: url(http://www.michaelbailey.co/images/fulls/04.jpg)">
+<div ><center>
 <text align="left">Resume here: <a href="http://www.michaelbailey.co/resume.pdf">Resume</a></text><text text-align="right"><a href="http://www.michaelbailey.co">     </br>Homepage</a></text>
 </br></br></div>
 <iframe src="http://www.michaelbailey.co/resume.pdf" width=100% height=100%></iframe>
