--- a/resume/index.html
+++ b/resume/index.html
@@ -3,7 +3,7 @@
 
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" /></head>
-<body style="background-image: url(http://www.michaelbailey.co/images/fulls/04.jpg)">
+<body style="background-image: url(http://www.michaelbailey.co/images/fulls/04.jpg) width=100% height=100%">
 <div ><center>
 <text align="left">Resume here: <a href="http://www.michaelbailey.co/resume.pdf">Resume</a></text><text text-align="right"><a href="http://www.michaelbailey.co">     </br>Homepage</a></text>
 </br></br></div>
