--- a/resume/index.html
+++ b/resume/index.html
@@ -5,8 +5,8 @@
 			<link rel="stylesheet" href="css/style.css" /></head>
 <body style="background-image: url(http://www.michaelbailey.co/images/fulls/04.jpg); background-size:100%">
 <div ><center>
-<text align="left">Resume here: <a href="http://www.michaelbailey.co/resume.pdf">Resume</a></text><text text-align="right"><a href="http://www.michaelbailey.co">     </br>Homepage</a></text>
-</br></br></div>
+<text align="left"><p>Resume here: <a href="http://www.michaelbailey.co/resume.pdf">Resume</a></text><text text-align="right"><a href="http://www.michaelbailey.co">     </br>Homepage</a></text>
+</br></br></div></p>
 <iframe src="http://www.michaelbailey.co/resume.pdf" width=100% height=100%></iframe>
 
 </body>
