--- a/ITAdvice.html
+++ b/ITAdvice.html
@@ -8,7 +8,7 @@ What I need to do to solve the problem?
 function giveAdvice() { 
 var easyphrases = ["Oh, easy! ","Doesn't seem hard at all... ","No problem at all! ","Easy! "];
 var noun = ["multiplexer array.","optimus node.","calabration multiplexor.","declaratory variable.","API indicator.","user agent.","raw parameters."];
-var verb = ["Telnet into","SSH into","Extrapolate","Notorize", "Send raw data];
+var verb = ["Telnet into","SSH into","Extrapolate","Notorize", "Send raw data"];
 document.getElementById("answer").innerHTML= easyphrases[Math.floor(Math.random() * easyphrases.length)] + verb[Math.floor(Math.random() * verb.length)] + " into the " + noun[Math.floor(Math.random() * noun.length)]
 }
 </script>
