--- a/ITAdvice.html
+++ b/ITAdvice.html
@@ -14,8 +14,9 @@ document.getElementById("answer").innerHTML= easyphrases[Math.floor(Math.random(
 </script>
 </head>
 <body>
+<center>
 <font size="6"><b>IT HELP DESK</b></font>
-<center>Welcome, what do you need help with fixing?
+Welcome, what do you need help with fixing?
 <br /><br />
 <input type="text" value="Problem here" size="100"> 
 <input type="button" value="Get Solution" onclick="javascript:giveAdvice()">
