--- a/ITAdvice.html
+++ b/ITAdvice.html
@@ -15,7 +15,8 @@ document.getElementById("answer").innerHTML= easyphrases[Math.floor(Math.random(
 </head>
 <body>
 <center>
-<font size="6"><b>IT HELP DESK</b></font>
+<font size="6">
+<b>IT HELP DESK</b></font><br />
 Welcome, what do you need help with fixing?
 <br /><br />
 <input type="text" value="Problem here" size="100"> 
