--- a/ITAdvice.html
+++ b/ITAdvice.html
@@ -3,7 +3,7 @@
 <title>
 What I need to do to solve the problem?		
 </title>
-\\ lol i cant even code
+<!-- lol i cant even code -->
 <script type="text/javascript">
 function giveAdvice() { 
 var easyphrases = ["Oh, easy! ","Doesn't seem hard at all... ","No problem at all! ","Easy! "];
