--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ Here are a few things I did not put on my conventional resume: </br><ul><li>I've
 				<li><a href="#" class="fa fa-dribbble solo"><span>Dribbble</span></a></li>
 				
 				--> 
-				<li><a href="https://www.linkedin.com/profile/view?id=98814712" class="fa fa-linkedin solo"><span>LinkedIn</span></a></li></br>
+				<li><a href="https://www.linkedin.com/in/cybermichael" class="fa fa-linkedin solo"><span>LinkedIn</span></a></li></br>
 				<li><a href="/resume.pdf">Resume</a></li>
 			</ul>
 			<div class="copyright">
