--- a/headlines.html
+++ b/headlines.html
@@ -3,4 +3,11 @@
 <h1>Ah yes! Headlines!</h1>
 
 <br/><br/>
-<p>Headlines shall go here, probably on 9/18/2014
+<h1>September 18 - Washington Post</h1>
+<br/>
+
+<p>New York Times</p>
+<br/>
+<b>HOUSE BACKS BILL TO GIVE TRAINING TO SYRIAN REBELS</b><br/>
+
+A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?)
