--- a/headlines.html
+++ b/headlines.html
@@ -6,7 +6,7 @@
 <h1>September 18 - Washington Post</h1>
 <br/>
 
-<p>New York Times</p>
+<h2>New York Times</h2>
 <br/>
 <b>HOUSE BACKS BILL TO GIVE TRAINING TO SYRIAN REBELS</b><br/>
 
