--- a/headlines.html
+++ b/headlines.html
@@ -5,8 +5,7 @@
 <br/><br/>
 <h1>September 18 - Washington Post</h1>
 <br/>
-
-<h2>New York Times</h2>
+<b>New York Times</b>
 <br/>
 <b>HOUSE BACKS BILL TO GIVE TRAINING TO SYRIAN REBELS</b><br/>
 
