--- a/headlines.html
+++ b/headlines.html
@@ -3,9 +3,8 @@
 <h1>Ah yes! Headlines!</h1>
 
 <br/><br/>
-<h1>September 18 - Washington Post</h1>
+<h1>September 18 - NY Times</h1>
 <br/>
-<b>New York Times</b>
 <br/>
 <b>HOUSE BACKS BILL TO GIVE TRAINING TO SYRIAN REBELS</b><br/>
 
