--- a/headlines.html
+++ b/headlines.html
@@ -9,3 +9,16 @@
 <b>HOUSE BACKS BILL TO GIVE TRAINING TO SYRIAN REBELS</b><br/>
 
 A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?)
+<br/><br/><br/>
+<b>HOUSE BACKS BILL TO GIVE TRAINING TO SYRIAN REBELS</b><br/>
+
+A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?)
+<br/><br/><br/>
+<b>HOUSE BACKS BILL TO GIVE TRAINING TO SYRIAN REBELS</b><br/>
+
+A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?)
+<br/><br/><br/>
+<b>Surrogates and Couples Face A Maze of Laws, State by State</b><br/>
+After a drama with a couple who wanted a surrogate carrying their child to have an abortion, they went on a state-to-state legal race. This brought up the controversy of surrogates in the US (when you pay someone fertile to carry your child).
+A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?)
+<br/><br/><br/>
