--- a/headlines.html
+++ b/headlines.html
@@ -6,7 +6,7 @@
 <h1>September 18 - NY Times</h1>
 <br/>
 <br/>
-<b>HOUSE BACKS BILL TO GIVE TRAINING TO SYRIAN REBELS</b><br/>
+<b><img src="http://img3.wikia.nocookie.net/__cb20100701113752/fantendo/images/f/f6/Power_Star_Icon_SMR.png" width="16" height="16" />HOUSE BACKS BILL TO GIVE TRAINING TO SYRIAN REBELS</b><br/>
 
 A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?)
 <br/><br/><br/>
