--- a/headlines.html
+++ b/headlines.html
@@ -1,12 +1,12 @@
 <title>Headlines for Quizzes</title>
 
 <h1>Ah yes! Headlines!</h1>
-
+<font size="1">This site is not an official FCPS website. It's also super poorly designed, in that there is no design.</font>
 <br/><br/>
 <h1>September 18 - NY Times</h1>
 <br/>
 <br/>
-<b><img src="http://img3.wikia.nocookie.net/__cb20100701113752/fantendo/images/f/f6/Power_Star_Icon_SMR.png" width="16" height="16" />HOUSE BACKS BILL TO GIVE TRAINING TO SYRIAN REBELS</b><br/>
+<b><img src="http://img3.wikia.nocookie.net/__cb20100701113752/fantendo/images/f/f6/Power_Star_Icon_SMR.png" width="16" height="16" /> HOUSE BACKS BILL TO GIVE TRAINING TO SYRIAN REBELS</b><br/>
 
 A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?)
 <br/><br/><br/>
