--- a/headlines.html
+++ b/headlines.html
@@ -10,9 +10,9 @@
 
 A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?)
 <br/><br/><br/>
-<b>HOUSE BACKS BILL TO GIVE TRAINING TO SYRIAN REBELS</b><br/>
+<b>Scottish Vote Weighs Pride Against Risk</b><br/>
 
-A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?)
+Basically, do they split from the UK or not. There's economic risk. They did it. YOLO
 <br/><br/><br/>
 <b>Women’s Views on N.F.L. Dim</b><br/>
 Women don't like the NFL because the NFL is being hella controversial tbh.
