--- a/headlines.html
+++ b/headlines.html
@@ -1,5 +1,17 @@
 <title>Headlines for Quizzes</title>
-
+<head></head><script>
+  function moarsept18() {
+   document.getElementById("moar1").value="Basically, do they split from the UK or not. There's economic risk. They did it. YOLO
+<br/><br/><br/>
+<b>Women’s Views on N.F.L. Dim</b><br/>
+Women don't like the NFL because the NFL is being hella controversial tbh.
+<br/><br/><br/>
+<b>Surrogates and Couples Face A Maze of Laws, State by State</b><br/>
+After a drama with a couple who wanted a surrogate carrying their child to have an abortion,<br/>they went on a state-to-state legal race. This brought up the controversy of surrogates in the US (when you pay someone fertile to carry your child).
+A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?)
+<br/><br/><br/>" 
+  }
+</script>
 <h1>Ah yes! Headlines!</h1>
 <font size="1">This site is not an official FCPS website. It's also super poorly designed, in that there is no design.</font>
 <br/><br/>
@@ -10,14 +22,6 @@
 
 A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?)
 <br/><br/><br/>
-<b>Scottish Vote Weighs Pride Against Risk</b><br/>
+<input type="button" value="Moar plis" onClick="moarsept18()"
+<span id="moar1"></span>
 
-Basically, do they split from the UK or not. There's economic risk. They did it. YOLO
-<br/><br/><br/>
-<b>Women’s Views on N.F.L. Dim</b><br/>
-Women don't like the NFL because the NFL is being hella controversial tbh.
-<br/><br/><br/>
-<b>Surrogates and Couples Face A Maze of Laws, State by State</b><br/>
-After a drama with a couple who wanted a surrogate carrying their child to have an abortion,<br/>they went on a state-to-state legal race. This brought up the controversy of surrogates in the US (when you pay someone fertile to carry your child).
-A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?)
-<br/><br/><br/>
