--- a/headlines.html
+++ b/headlines.html
@@ -1,7 +1,7 @@
 <title>Headlines for Quizzes</title>
 <head></head><script>
   function moarsept18() {
-   document.getElementById("moar1").value="Basically, do they split from the UK or not. There's economic risk. They did it. YOLO
+   document.getElementById("moar1").innerHTML="Basically, do they split from the UK or not. There's economic risk. They did it. YOLO
 <br/><br/><br/>
 <b>Women’s Views on N.F.L. Dim</b><br/>
 Women don't like the NFL because the NFL is being hella controversial tbh.
