--- a/headlines.html
+++ b/headlines.html
@@ -2,6 +2,7 @@
 <head></head><script>
   function moarsept18() {
    document.getElementById("moar1").innerHTML="Basically, do they split from the UK or not. There's economic risk. They did it. YOLO
+
 <br/><br/><br/>
 <b>Women’s Views on N.F.L. Dim</b><br/>
 Women don't like the NFL because the NFL is being hella controversial tbh.
@@ -22,6 +23,6 @@ A relatively one sided vote, the House voted to arm Syrian rebels to fight again
 
 A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?)
 <br/><br/><br/>
-<input type="button" value="Moar plis" onClick="moarsept18()"
+<input type="button" value="Moar plis" onClick="javascript:moarsept18()"
 <span id="moar1"></span>
 
