--- a/headlines.html
+++ b/headlines.html
@@ -1,6 +1,6 @@
 <title>Headlines for Quizzes</title>
-<head></head><script>
-  function moarsept18 () {
+<head><script type="text/javascript">
+  function moarsept18() {
    document.getElementById("moar1").innerHTML="Basically, do they split from the UK or not. There's economic risk. They did it. YOLO
 
 <br/><br/><br/>
