--- a/headlines.html
+++ b/headlines.html
@@ -17,3 +17,5 @@ A relatively one sided vote, the House voted to arm Syrian rebels to fight again
 <input type="button" value="Moar plis" onClick="javascript:moarsept18()"
 <span id="moar1"></span>
 
+</body>
+</html>
