--- a/headlines.html
+++ b/headlines.html
@@ -14,7 +14,7 @@
 
 A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?)
 <br/><br/><br/>
-<input type="button" value="Moar plis" onClick="javascript:moarsept18()"
+<input type="button" value="Moar plis" onClick="javascript:moarsept18()">
 <span id="moar1"></span>
 
 </body>
