--- a/headlines.html
+++ b/headlines.html
@@ -15,13 +15,12 @@ Against Risk</b><br/>Basically, do they split from the UK or not. There's econom
 <br/>
 <b><img src="http://img3.wikia.nocookie.net/__cb20100701113752/fantendo/images/f/f6/Power_Star_Icon_SMR.png" width="16" height="16" /> HOUSE BACKS BILL TO GIVE TRAINING TO SYRIAN REBELS</b><br/>
 
-A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?)
+A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamic State (soooo ISIL)
 <br/><br/><br/>
 <input type="button" value="Moar plis" onClick="javascript:moarsept18()">
 <span id="moar1"></span><br/>
 
-<b><img src="http://img3.wikia.nocookie.net/__cb20100701113752/fantendo/images/f/f6/Power_Star_Icon_SMR.png" width="16" height="16" /> HOUSE BACKS BILL TO GIVE TRAINING TO SYRIAN REBELS</b><br/>
-<h1>September 18 - Washington Post</h1>
+<b><img src="http://img3.wikia.nocookie.net/__cb20100701113752/fantendo/images/f/f6/Power_Star_Icon_SMR.png" width="16" height="16" /> HOUSE BACKS PLAN TO FIGHT ISLAMIC STATE
 <span id="moar2"></span>
 
 Similar to the above article, but it has more notes on how it's Obama's strategy.
