--- a/headlines.html
+++ b/headlines.html
@@ -21,11 +21,11 @@ A relatively one sided vote, the House voted to arm Syrian rebels to fight again
 <span id="moar1"></span><br/>
 
 <b><img src="http://img3.wikia.nocookie.net/__cb20100701113752/fantendo/images/f/f6/Power_Star_Icon_SMR.png" width="16" height="16" /> HOUSE BACKS PLAN TO FIGHT ISLAMIC STATE
-<span id="moar2"></span>
+
 
 Similar to the above article, but it has more notes on how it's Obama's strategy.
 <br/>
-
-<b>Apple devices to lock out police</b></br>Basically, they reworked their encryption so they don't have the key. <i>This is a bro move on the off chance they actually did it.</i></br></br><b>Nickels and dimes add up for airline</b></br>Basically Spirit Airlines is cheap but fees are killer.
+<span id="moar2"></span>
+<b>Apple devices to lock out police</b></br>Basically, they reworked their encryption so they don't have the key. <i>This is a bro move on the off chance they actually did it.</i></br></br><b>Nickels and dimes add up for airline</b></br>Basically Spirit Airlines is cheap but fees are killer.</br><b>Scottish independence movement thrives on rage against Westminster</b></br>Same story as the NY Times one.
 </body>
 </html>
