--- a/headlines.html
+++ b/headlines.html
@@ -23,6 +23,8 @@ A relatively one sided vote, the House voted to arm Syrian rebels to fight again
 
 Similar to the above article, but it has more notes on how it's Obama's strategy.
 <br/>
+<input type="button" value="Moar plis" onClick="javascript:moarsept181()">
+
 <span id="moar2"></span>
 </body>
 </html>
