--- a/headlines.html
+++ b/headlines.html
@@ -3,7 +3,7 @@
   function moarsept18() {
    document.getElementById("moar1").innerHTML="<b>Scottish Vote Weighs Pride Against Risk</b><br/>Basically, do they split from the UK or not. There's economic risk. They did it. YOLO<br/><br/><br/><b>Women’s Views on N.F.L. Dim</b><br/>Women don't like the NFL because the NFL is being hella controversial tbh.<br/><br/><br/><b>Surrogates and Couples Face A Maze of Laws, State by State</b><br/>After a drama with a couple who wanted a surrogate carrying their child to have an abortion,<br/>they went on a state-to-state legal race. This brought up the controversy of surrogates in the US (when you pay someone fertile to carry your child)A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?<br/><br/><br/>";
   function moarsept181() {
-    document.getElementById("moar2").innerHTML="<b>Apple devices to lock out police</b></br>Basically, they reworked their encryption so they don't have the key. <i>This is a bro move on the off chance they actually did it.</i></br></br><b>Nickels and dimes add up for airline</b></br>Basically Spirit Airlines is cheap but fees are killer.</br><b>Scottish independence movement thrives on rage against Westminster</b></br>Same story as the NY Times one."
+   document.getElementById("moar2").innerHTML="<b>Apple devices to lock out police</b></br>Basically, they reworked their encryption so they don't have the key. <i>This is a bro move on the off chance they actually did it.</i></br></br><b>Nickels and dimes add up for airline</b></br>Basically Spirit Airlines is cheap but fees are killer.</br><b>Scottish independence movement thrives on rage against Westminster</b></br>Same story as the NY Times one.";
   }
 </script>
 <h1>Ah yes! Headlines!</h1>
@@ -22,7 +22,7 @@ A relatively one sided vote, the House voted to arm Syrian rebels to fight again
 <b><img src="http://img3.wikia.nocookie.net/__cb20100701113752/fantendo/images/f/f6/Power_Star_Icon_SMR.png" width="16" height="16" /> HOUSE BACKS PLAN TO FIGHT ISLAMIC STATE</b>
 
 Similar to the above article, but it has more notes on how it's Obama's strategy.
-<br/>
+<br/><br/>
 <input type="button" value="Moar plis" onClick="javascript:moarsept181()">
 
 <span id="moar2"></span>
