--- a/headlines.html
+++ b/headlines.html
@@ -20,12 +20,14 @@ A relatively one sided vote, the House voted to arm Syrian rebels to fight again
 <input type="button" value="Moar plis" onClick="javascript:moarsept18()">
 <span id="moar1"></span><br/><br/>
 <h1>September 18 - WashPo</h1>
-<b><img src="http://img3.wikia.nocookie.net/__cb20100701113752/fantendo/images/f/f6/Power_Star_Icon_SMR.png" width="16" height="16" /> HOUSE BACKS PLAN TO FIGHT ISLAMIC STATE</b>
+<b><img src="http://img3.wikia.nocookie.net/__cb20100701113752/fantendo/images/f/f6/Power_Star_Icon_SMR.png" width="16" height="16" /> HOUSE BACKS PLAN TO FIGHT ISLAMIC STATE</b></br>
 
 Similar to the above article, but it has more notes on how it's Obama's strategy.
 <br/><br/>
 <input type="button" value="Moar plis" onClick="javascript:moarsept181()">
 
 <span id="moar2"></span>
+
+</br></br></hl>
 </body>
 </html>
