--- a/headlines.html
+++ b/headlines.html
@@ -28,6 +28,6 @@ Similar to the above article, but it has more notes on how it's Obama's strategy
 
 <span id="moar2"></span>
 
-</br></br></hl>
+</br></br></hl border="1">
 </body>
 </html>
