--- a/headlines.html
+++ b/headlines.html
@@ -28,6 +28,11 @@ Similar to the above article, but it has more notes on how it's Obama's strategy
 
 <span id="moar2"></span>
 
-</br></br><hr>
+</br></br><hr></br></br>
+<h1>September 17 - NY Times</h1>
+<b><img src="http://img3.wikia.nocookie.net/__cb20100701113752/fantendo/images/f/f6/Power_Star_Icon_SMR.png" width="16" height="16" />U.S. GENERAL OPEN TO GROUND FORCE AS OPTION IN IRAQ</b></br>
+Basically saying we won't just have potential airstries and aid, but rather boots on the ground potentially.
+
+<span id="moar3"></span>
 </body>
 </html>
