--- a/headlines.html
+++ b/headlines.html
@@ -31,7 +31,9 @@ Similar to the above article, but it has more notes on how it's Obama's strategy
 </br></br><hr></br></br>
 <h1>September 17 - NY Times</h1>
 <b><img src="http://img3.wikia.nocookie.net/__cb20100701113752/fantendo/images/f/f6/Power_Star_Icon_SMR.png" width="16" height="16" />U.S. GENERAL OPEN TO GROUND FORCE AS OPTION IN IRAQ</b></br>
-Basically saying we won't just have potential airstries and aid, but rather boots on the ground potentially.
+Basically saying we won't just have potential airstries and aid, but rather boots on the ground potentially.</br>
+</br><b><img src="http://img3.wikia.nocookie.net/__cb20100701113752/fantendo/images/f/f6/Power_Star_Icon_SMR.png" width="16" height="16" />OBAMA PRESSING LEADERS TO SPEED EBOLA RESPONSE</b></br>
+Relatively self-explainatory.hundreds of thousands of lives. “This epidemic is going to get worse before it gets better,” Mr. Obama said</br>
 
 <span id="moar3"></span>
 </body>
