--- a/headlines.html
+++ b/headlines.html
@@ -34,6 +34,12 @@ Similar to the above article, but it has more notes on how it's Obama's strategy
 Basically saying we won't just have potential airstries and aid, but rather boots on the ground potentially.</br>
 </br><b><img src="http://img3.wikia.nocookie.net/__cb20100701113752/fantendo/images/f/f6/Power_Star_Icon_SMR.png" width="16" height="16" />OBAMA PRESSING LEADERS TO SPEED EBOLA RESPONSE</b></br>
 Relatively self-explainatory.hundreds of thousands of lives. “This epidemic is going to get worse before it gets better,” Mr. Obama said</br>
+</br></br>
+<input type="button" value="Moar plis" onClick="javascript:moarsept17()">
+
+
+<b>Where Health Law Helps Voters but Saps Votes</b></br>The insurance plan isn't doing terrible, but everyone still hates Obama for.
+<b>Shiite Militias Pose Challenge For U.S. in Iraq</b></br>Former enemy milita groups in Iraq are now helping with ISIL, but we refuse to work with them.
 
 <span id="moar3"></span>
 </body>
