--- a/headlines.html
+++ b/headlines.html
@@ -7,7 +7,7 @@
    document.getElementById("moar2").innerHTML="<br/><b>Apple devices to lock out police</b></br>Basically, they reworked their encryption so they don't have the key.<br/><i>Opinion: This is a bro move on the off chance they actually did it.</i></br><b>Nickels and dimes add up for airline</b></br>Basically Spirit Airlines is cheap but fees are killer.</br><b>Scottish independence movement thrives on rage against Westminster</b></br>Same story as the NY Times one.";
   }
   function moarsept17() {
-   documet.getElementById("moar3").innerHTML="</br><b>Where Health Law Helps Voters but Saps Votes</b></br>The insurance plan isn't doing terrible, but everyone still hates Obama for it.<b>Shiite Militias Pose Challenge For U.S. in Iraq</b></br>Former enemy milita groups in Iraq are now helping with ISIL, but we refuse to work with them.";
+   document.getElementById("moar3").innerHTML="</br><b>Where Health Law Helps Voters but Saps Votes</b></br>The insurance plan isn't doing terrible, but everyone still hates Obama for it.<b>Shiite Militias Pose Challenge For U.S. in Iraq</b></br>Former enemy milita groups in Iraq are now helping with ISIL, but we refuse to work with them.";
   }
 </script>
 <h1>Ah yes! Headlines!</h1>
@@ -39,7 +39,6 @@ Basically saying we won't just have potential airstries and aid, but rather boot
 Relatively self-explainatory.hundreds of thousands of lives. “This epidemic is going to get worse before it gets better,” Mr. Obama said</br>
 </br></br>
 <input type="button" value="Moar plis" onClick="javascript:moarsept17()">
-
 
 <span id="moar3"></span>
 </body>
