--- a/headlines.html
+++ b/headlines.html
@@ -4,7 +4,16 @@
     document.getElementById(element).innerHTML=""
   }
   function moarsept18() {
-   document.getElementById("moar1").innerHTML="<input type='button' onclick='javascript:clear('moar1')' value='Clear'><b>Scottish Vote Weighs Pride Against Risk</b><br/>Basically, do they split from the UK or not. There's economic risk. They did it. YOLO<br/><br/><br/><b>Women’s Views on N.F.L. Dim</b><br/>Women don't like the NFL because the NFL is being hella controversial tbh.<br/><br/><br/><b>Surrogates and Couples Face A Maze of Laws, State by State</b><br/>After a drama with a couple who wanted a surrogate carrying their child to have an abortion,<br/>they went on a state-to-state legal race. This brought up the controversy of surrogates in the US (when you pay someone fertile to carry your child)A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?<br/><br/><br/>"; 
+    if (document.getElementById("moar1").innerHTML !== "") {
+      clear("moar1")
+    }
+    
+       else if (document.getElementById("moar1").innerHTML="") {
+         document.getElementById("moar1").innerHTML="<b>Scottish Vote Weighs Pride Against Risk</b><br/>Basically, do they split from the UK or not. There's economic risk. They did it. YOLO<br/><br/><br/><b>Women’s Views on N.F.L. Dim</b><br/>Women don't like the NFL because the NFL is being hella controversial tbh.<br/><br/><br/><b>Surrogates and Couples Face A Maze of Laws, State by State</b><br/>After a drama with a couple who wanted a surrogate carrying their child to have an abortion,<br/>they went on a state-to-state legal race. This brought up the controversy of surrogates in the US (when you pay someone fertile to carry your child)A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?<br/><br/><br/>"; 
+       }
+       }
+    }
+    
   }
   function moarsept181() {
    document.getElementById("moar2").innerHTML="<br/><b>Apple devices to lock out police</b></br>Basically, they reworked their encryption so they don't have the key.<br/><i>Opinion: This is a bro move on the off chance they actually did it.</i></br><b>Nickels and dimes add up for airline</b></br>Basically Spirit Airlines is cheap but fees are killer.</br><b>Scottish independence movement thrives on rage against Westminster</b></br>Same story as the NY Times one.";
