--- a/headlines.html
+++ b/headlines.html
@@ -5,12 +5,11 @@
   }
   function moarsept18() {
     if (document.getElementById("moar1").innerHTML !== "") {
-      clear("moar1")
+      clear("moar1");
     }
     
        else if (document.getElementById("moar1").innerHTML="") {
          document.getElementById("moar1").innerHTML="<b>Scottish Vote Weighs Pride Against Risk</b><br/>Basically, do they split from the UK or not. There's economic risk. They did it. YOLO<br/><br/><br/><b>Women’s Views on N.F.L. Dim</b><br/>Women don't like the NFL because the NFL is being hella controversial tbh.<br/><br/><br/><b>Surrogates and Couples Face A Maze of Laws, State by State</b><br/>After a drama with a couple who wanted a surrogate carrying their child to have an abortion,<br/>they went on a state-to-state legal race. This brought up the controversy of surrogates in the US (when you pay someone fertile to carry your child)A relatively one sided vote, the House voted to arm Syrian rebels to fight against the militant Islamist State (soooo ISIL?<br/><br/><br/>"; 
-       }
        }
     }
     
